--- a/public/geometry/index.html
+++ b/public/geometry/index.html
@@ -373,7 +373,8 @@ Let's say your multi-dimensional feature $\bf f$ was dimension $d_f=2$ but to yo
         <svg viewBox="0 0 28 23" height="100%" width="19" xmlns="http://www.w3.org/2000/svg"><path d="M10 13a5 5 0 0 0 7.54.54l3-3a5 5 0 0 0-7.07-7.07l-1.72 1.71" fill="none" stroke-linecap="round" stroke-miterlimit="10" stroke-width="2"/><path d="M14 11a5 5 0 0 0-7.54-.54l-3 3a5 5 0 0 0 7.07 7.07l1.71-1.71" fill="none" stroke-linecap="round" stroke-miterlimit="10" stroke-width="2"/></svg>
     </a>
 </span>
-</h2><p>150-way logistic regression: basically just a bunch of model_dim vectors each individually trained to activate for e.g. a 50 char line, 51 char, etc. If they take all these guys and do PCA, the top 6 components capture 82% of the variance of these vectors. You can just plot the behavior of each of these logistic regression probes on a heatmap, and see that the diagonal is quite fuzzy. But you also see that there is some small off-diagonal &ldquo;ringing&rdquo; in their predictions as well (which also occurs if you take cosine sim. between all the mean vectors, or the probe vectors).</p>
+</h2><p><del>150-way logistic regression: basically just a bunch of model_dim vectors each individually trained to activate for e.g. a 50 char line, 51 char, etc.</del> I misunderstood because of their language: the precise definition of &ldquo;logistic regression&rdquo; is binary classification with a single vector and a sigmoid activation function, but if you look closer they actually do <em>multinomial logistic regression</em> (&ldquo;as a 150-way multiclass classification problem&rdquo;). In other words, they have a probe $P\in\mathbb{R}^{(150,d)}$ and then calculate cross-entropy loss with $\text{softmax}(Px)$ where $x$ is a d-dimensional hidden state. So this is actually very similar to approaches I&rsquo;ve used–the difference is that they analyze all of the rows of this resulting probe in interesting ways.</p>
+<p>Anyway, if they take all these guys and do PCA, the top 6 components capture 82% of the variance of these vectors. You can just plot the behavior of each of these <del>logistic regression probes</del> d-dimensional probe rows on a heatmap, and see that the diagonal is quite fuzzy. But you also see that there is some small off-diagonal &ldquo;ringing&rdquo; in their predictions as well (which also occurs if you take cosine sim. between all the mean vectors, or the probe vectors).</p>
 <ul>
 <li>A very fuzzy intuition for this is that if you have some representation of line width that snakes around within a subspace back onto itself, as well as a logistic regression probe vector that&rsquo;s trained to have a high dot product with lines of a particular length, then it wouldn&rsquo;t just slightly activate for adjacent line widths but <em>also</em> for areas near it on the spiral. (This is basically the intuition in their toy example.)</li>
 </ul>
@@ -390,7 +391,36 @@ If you have a permutation $\rho$ that maps $e_i \mapsto e_{i+1}$, then since $X$
         <svg viewBox="0 0 28 23" height="100%" width="19" xmlns="http://www.w3.org/2000/svg"><path d="M10 13a5 5 0 0 0 7.54.54l3-3a5 5 0 0 0-7.07-7.07l-1.72 1.71" fill="none" stroke-linecap="round" stroke-miterlimit="10" stroke-width="2"/><path d="M14 11a5 5 0 0 0-7.54-.54l-3 3a5 5 0 0 0 7.07 7.07l1.71-1.71" fill="none" stroke-linecap="round" stroke-miterlimit="10" stroke-width="2"/></svg>
     </a>
 </span>
-</h2>
+</h2><p>All this stuff before was looking at &ldquo;character count,&rdquo; the number of characters that there are so far for some arbitrary token. Now, they train probes for &ldquo;line width,&rdquo; which is different for each document and specifically at the newline tokens.</p>
+<p>They find a head that outputs a &ldquo;boundary detection feature.&rdquo; The hypothesis here is that its query would be the character count at the current token, and the keys would allow the head to match its &ldquo;current chars&rdquo; query to any previous newlines. So they have a bunch of probes that can identify &ldquo;current chars&rdquo; and &ldquo;line width&rdquo; features, which appear to be aligned if they take the joint PCA and visualize in 3D. Following their hypothesis, if they multiply the &ldquo;current char&rdquo; probes through the $W_q$ matrix, and the &ldquo;line width&rdquo; probes through the $W_k$ matrix, they see that the two manifolds are twisted against each other so that if we&rsquo;re at &ldquo;character count of 42&rdquo; then we&rsquo;ll activate the most for &ldquo;line width of 46&rdquo;.</p>
+<ul>
+<li>Probably unlikely that the distribution of line widths in real life is so uniform&hellip; interesting that the learned algorithm is so general.</li>
+<li>Cosine similarity heatmaps within the QK subspace show more &ldquo;ringing&rdquo;. Let&rsquo;s say the current chars are at 38, then the head would attend heavily to a newline with width 40, but also kind of lightly to 20 as well.</li>
+<li>I wish we could know how big their model is, since it&rsquo;s interesting that the model has <em>several</em> boundary heads. I wonder what % of its overall heads those take up.
+Also, the idea is that the boundary heads output information about how many characters are <em>remaining</em> as well as, presumably, whatever the separator token will be through the OV circuit. I&rsquo;m not sure exactly how that would work.</li>
+</ul>
+<h2 id="is-the-next-token-too-long" >Is the next token too long?
+<span>
+    <a href="#is-the-next-token-too-long">
+        <svg viewBox="0 0 28 23" height="100%" width="19" xmlns="http://www.w3.org/2000/svg"><path d="M10 13a5 5 0 0 0 7.54.54l3-3a5 5 0 0 0-7.07-7.07l-1.72 1.71" fill="none" stroke-linecap="round" stroke-miterlimit="10" stroke-width="2"/><path d="M14 11a5 5 0 0 0-7.54-.54l-3 3a5 5 0 0 0 7.07 7.07l1.71-1.71" fill="none" stroke-linecap="round" stroke-miterlimit="10" stroke-width="2"/></svg>
+    </a>
+</span>
+</h2><p>There&rsquo;s SAE features that seem to activate only if the next token will be too long (and upweight newline), and also features that activate if the next token is short, downweighting newline. How does the model combine the next-token prediction with the detected boundary?</p>
+<p>They calculate the mean over all the hidden states where the next token is $j$ characters long, and the mean over all states where there are only $i$ characters remaining. When you take the PCA of these mean vectors together, they look like two kind of orthogonal-ish curves. If you sum together any two points on the curve, that&rsquo;s like saying, &ldquo;there are $i$ characters remaining and I want to predict a $j$-character token.&rdquo; The way these curves are arranged makes it simple to draw a plane where $i-j=0$.</p>
+<ul>
+<li>Do they consider that the model doesn&rsquo;t actually predict one next token, but a distribution over future tokens? How exactly does that fit in here?</li>
+<li>&ldquo;This sum is principled because both sets of vectors are marginalized data means, so collectively have the mean of the data, which we center to be 0.&rdquo; Not exactly sure what the concern would be here?</li>
+</ul>
+<h2 id="how-do-heads-actually-calculate-num-characters-in-a-line" >How do heads actually calculate num. characters in a line?
+<span>
+    <a href="#how-do-heads-actually-calculate-num-characters-in-a-line">
+        <svg viewBox="0 0 28 23" height="100%" width="19" xmlns="http://www.w3.org/2000/svg"><path d="M10 13a5 5 0 0 0 7.54.54l3-3a5 5 0 0 0-7.07-7.07l-1.72 1.71" fill="none" stroke-linecap="round" stroke-miterlimit="10" stroke-width="2"/><path d="M14 11a5 5 0 0 0-7.54-.54l-3 3a5 5 0 0 0 7.07 7.07l1.71-1.71" fill="none" stroke-linecap="round" stroke-miterlimit="10" stroke-width="2"/></svg>
+    </a>
+</span>
+</h2><p>Interestingly, if you train more little probes, one for each possible token length, you can see that they form a rippled circle. Again, funny why it would need to be a circle, but this explains 70% of the variance.</p>
+<p><img src="/geometry/gurnee_embed_char.png" alt=""></p>
+<p>Apparently after layer 0 there&rsquo;s already rough probe accuracies for current # of characters at a given token position. They don&rsquo;t really explain how they find particular heads that are responsible for building up this information. The general vibe is that the QK circuit uses the previous newline as an attention sink and then smears the rest of its attn across subsequent tokens, whereas the OV circuit somehow combines an estimate based on avg. token length (4 chars) with &ldquo;corrections&rdquo; to each token based on the embedding-level information above.</p>
+
         </div>
         
 
