--- a/public/geometry/index.html
+++ b/public/geometry/index.html
@@ -420,6 +420,23 @@ Also, the idea is that the boundary heads output information about how many char
 </h2><p>Interestingly, if you train more little probes, one for each possible token length, you can see that they form a rippled circle. Again, funny why it would need to be a circle, but this explains 70% of the variance.</p>
 <p><img src="/geometry/gurnee_embed_char.png" alt=""></p>
 <p>Apparently after layer 0 there&rsquo;s already rough probe accuracies for current # of characters at a given token position. They don&rsquo;t really explain how they find particular heads that are responsible for building up this information. The general vibe is that the QK circuit uses the previous newline as an attention sink and then smears the rest of its attn across subsequent tokens, whereas the OV circuit somehow combines an estimate based on avg. token length (4 chars) with &ldquo;corrections&rdquo; to each token based on the embedding-level information above.</p>
+<h2 id="note-on-taking-pca-of-probe" >Note on &ldquo;taking PCA of probe&rdquo;
+<span>
+    <a href="#note-on-taking-pca-of-probe">
+        <svg viewBox="0 0 28 23" height="100%" width="19" xmlns="http://www.w3.org/2000/svg"><path d="M10 13a5 5 0 0 0 7.54.54l3-3a5 5 0 0 0-7.07-7.07l-1.72 1.71" fill="none" stroke-linecap="round" stroke-miterlimit="10" stroke-width="2"/><path d="M14 11a5 5 0 0 0-7.54-.54l-3 3a5 5 0 0 0 7.07 7.07l1.71-1.71" fill="none" stroke-linecap="round" stroke-miterlimit="10" stroke-width="2"/></svg>
+    </a>
+</span>
+</h2><p>I think that taking the SVD of the (n_classes, model_dim) probe $P$ from above is actually the same as doing PCA on the probe rows, if the mean of these rows is close to zero.</p>
+<p>If you want to do PCA on the rows of $P$, then we can construct a matrix $X=P^T$ that has all of these row vectors as data points arranged in columns. (This is just a thing I&rsquo;m doing so I don&rsquo;t have to keep transposing $P$).
+For PCA you&rsquo;d take the SVD/eigendecomp (basically the same for symmetric matrices) of $XX^T=Q\Lambda Q^{-1}$, assuming that the mean of the rows of $P$ is centered at 0. For SVD you have $X=U\Sigma V^T$.
+$$(U\Sigma V^T)(U\Sigma V^T)^T= Q\Lambda Q^{-1}$$
+$$U\Sigma V^TV\Sigma U^T= Q\Lambda Q^{-1}$$
+$$U\Sigma \Sigma U^T= Q\Lambda Q^{-1}$$
+therefore $U$, the left singular vectors of $X$, are the same as the principal components of a PCA ran on the rows of $P$. The shape of $XX^T$ would be (model_dim, model_dim), and $U$ would be (model_dim, model_dim), but only at most 150 of those columns would actually be used.</p>
+<p>Since we defined $X=P^T$ then it&rsquo;s actually $V\Sigma U^T = P$ and thus $U$ is really the <em>right</em> singular vectors of our probe. Aka, these are the vectors that we rotate the residual stream space onto before zero-ing out $d-150$ of the model dimensions (or more, if it&rsquo;s low-rank). We could also call them the &ldquo;SVD input space&rdquo; basis vectors; vectors that define which part of the residual stream is most important for this probe to make its decisions.</p>
+<p>&ldquo;The top 3 principal components of all the 150 logistic regression vectors&rdquo; is actually the same as &ldquo;the top 3 input space singular vectors&rdquo;. This means that if we had the probe they had, and took the SVD, the singular values would drop off really quickly, I think.</p>
+<p>Also, if we wanted to get the same plots as them after taking the SVD, the key thing to do would be to project all of the rows of the original probe $P$ onto the first three singular vectors on the right side of the SVD of $P$. This is quite intuitive, because if the probe has found a bunch of vectors in the residual stream that have a high dot product with a particular character count, then they should probably make sense projected onto the most important singular vectors for probing out that character count. But it&rsquo;s also weird and circular.</p>
+<p>I think that the &ldquo;taking the PCA of all of these logistic probes&rdquo; framing is quite nice and maybe more intuitive than what I&rsquo;ve written here.</p>
 
         </div>
         
