--- a/public/circles/index.html
+++ b/public/circles/index.html
@@ -299,7 +299,7 @@ $$\begin{bmatrix}
 \sin\theta - i\cos\theta
 \end{bmatrix} = \begin{bmatrix}\cos\theta + i\sin\theta \\ -i\cos\theta + \sin\theta\end{bmatrix} $$
 </details>
-<p>I never really realized this, but rotations are deeply two-dimensional, tied up with the dualness of complex numbers. If you have a rotation in higher dimensions, it&rsquo;s actually constrained to a 2D plane, or multiple 2D planes if we&rsquo;re more than three dimensions. For now, if you think of any rotation in 3D, it&rsquo;s actually always a rotation in a 2D subspace, with an extra axis orthogonal to the plane that the vector is rotated on. Literally imagine any rotation in 3D and there&rsquo;s always a &ldquo;spoke&rdquo; that&rsquo;s being rotated around. Concretely, if we have vectors $[x,y,z]$, then a rotation by an angle of $\theta$ around the x-axis (on the yz plane) would look like:</p>
+<p>I never really realized this, but rotations are deeply two-dimensional, tied up with the dualness of complex numbers. If you have a rotation in higher dimensions, it&rsquo;s actually constrained to a 2D plane, or multiple 2D planes if we&rsquo;re more than three dimensions. For now, if you think of any rotation in 3D, it&rsquo;s actually always a rotation in a 2D subspace, with an extra axis orthogonal to the plane that the vector is rotated on. Literally imagine any rotation in 3D and there&rsquo;s always an &ldquo;axle&rdquo; that&rsquo;s being rotated around. Concretely, if we have vectors $[x,y,z]$, then a rotation by an angle of $\theta$ around the x-axis (on the yz plane) would look like:</p>
 <p>$$R(\theta)= \begin{bmatrix}
 1 &amp; 0 &amp; 0 \\
 0 &amp; \cos\theta &amp; -\sin\theta \\
@@ -332,7 +332,7 @@ The angle that $R$ rotates by is given by $\theta=\arctan(\beta/\alpha)$. In oth
 <hr>
 <ol>
 <li id="fn:1">
-<p>When I asked Claude to give me feedback on these notes, it said that actually any real orthogonal matrix in even dimensions can be block-diagonalized into 2x2 rotation blocks, which it called the Schur decomposition.&#160;<a href="#fnref:1" class="footnote-backref" role="doc-backlink">&#x21a9;&#xfe0e;</a></p>
+<p>When I asked Claude to give me feedback on these notes, it said that actually any real orthogonal matrix in even dimensions can be block-diagonalized into 2x2 rotation blocks, which it called the Schur decomposition. In the case of orthogonal matrices, which are normal, the Schur decomposition is the eigendecomposition, so I think this can be safely ignored for now.&#160;<a href="#fnref:1" class="footnote-backref" role="doc-backlink">&#x21a9;&#xfe0e;</a></p>
 </li>
 </ol>
 </div>
