add simplex talk to site

--- a/public/index.html
+++ b/public/index.html
@@ -269,6 +269,7 @@
     <h3>Recent updates</h3>
     <div style="max-height: 150px; overflow-y: auto; border: 1px solid #ddd; padding: 10px; margin: 15px 0;">
     <p style="margin: 5px 0;"><b>Jan 2026:</b> I'll be visiting <a href="https://www.goodfire.ai/">Goodfire</a> as a Research Fellow from January through March! Excited to live in San Francisco for a bit.</p>
+    <p style="margin: 5px 0;"><b>Jan 2026:</b> Gave a talk on recent work at <a href="https://www.simplexaisafety.com/">Simplex AI</a>, it was great to meet everyone there. <a href="https://arithmetic.baulab.info/"><i>[Concept Heads for Vector Arithmetic]</i></a></p>
     <p style="margin: 5px 0;"><b>Dec 2025:</b> Check out my new blog post: <a href="rerereading">Is AI Writing Still Nonsense?</a></p>
     <p style="margin: 5px 0;"><b>Dec 2025:</b> Gave an invited lightning talk at the <a href="https://mechinterpworkshop.com/">NeurIPS Mech Interp Workshop</a> [<i>Equifinality: There's Often Multiple Explanations</i>].</p>
     <p style="margin: 5px 0;"><b>Nov 2025:</b> New preprint by student <a href="https://keremsahin22.github.io/">Kerem Şahin</a> on <a href="https://arxiv.org/abs/2511.05743">ICL without copying.</a></p>
